Mejoras en las llamadas a directions

--- a/src/app/components/popover/popover.component.html
+++ b/src/app/components/popover/popover.component.html
@@ -8,7 +8,7 @@
   <ion-item [ngClass]="categoria">
     <ion-icon name="medkit" slot="start"></ion-icon>
     <p class="text-wrap" style="font-size: 0.8em;">
-      Indica tiempo de espera en el centro de salud.
+      Indica tiempo de espera en el centro de salud. Sin-Dato: No se cuenta con la información de espera del Establecimiento.
     </p>
   </ion-item>
   <ion-item [ngClass]="categoria">
