mejoras en el estilo de la selecion gravedad

--- a/src/app/gravedad/gravedad.page.html
+++ b/src/app/gravedad/gravedad.page.html
@@ -43,7 +43,7 @@
         <img src="{{categorizacion.gravedad.c5.img}}">
       </div>
       <h2 ion-text class="rojo">{{categorizacion.gravedad.c1.tipoGravedad}}</h2>
-      {{categorizacion.gravedad.c1.ejemplo}}
+      <p class="p-gravedad">{{categorizacion.gravedad.c1.ejemplo}}</p>
     </div>
 
     <div *ngIf="gravedad == 4">
@@ -51,7 +51,7 @@
           <img src="{{categorizacion.gravedad.c4.img}}">
       </div>
       <h2 ion-text class="naranja">{{categorizacion.gravedad.c2.tipoGravedad}}</h2>
-      {{categorizacion.gravedad.c2.ejemplo}}
+      <p class="p-gravedad">{{categorizacion.gravedad.c2.ejemplo}}</p>
     </div>
 
     <div *ngIf="gravedad == 3">
@@ -59,7 +59,7 @@
         <img src="{{categorizacion.gravedad.c3.img}}">
       </div>
       <h2 ion-text class="amarillo">{{categorizacion.gravedad.c3.tipoGravedad}}</h2>
-      {{categorizacion.gravedad.c3.ejemplo}}
+      <p class="p-gravedad">{{categorizacion.gravedad.c3.ejemplo}}</p>
     </div>
 
     <div *ngIf="gravedad == 2">
@@ -67,7 +67,7 @@
         <img src="{{categorizacion.gravedad.c2.img}}">
       </div>
       <h2 ion-text class="verde">{{categorizacion.gravedad.c4.tipoGravedad}}</h2>
-      {{categorizacion.gravedad.c4.ejemplo}}
+      <p class="p-gravedad">{{categorizacion.gravedad.c4.ejemplo}}</p>
     </div>
 
     <div *ngIf="gravedad == 1">
@@ -75,7 +75,7 @@
         <img src="{{categorizacion.gravedad.c1.img}}">
       </div>
       <h2 ion-text class="azul">{{categorizacion.gravedad.c5.tipoGravedad}}</h2>
-      {{categorizacion.gravedad.c5.ejemplo}}
+      <p class="p-gravedad">{{categorizacion.gravedad.c5.ejemplo}}</p>
     </div>
   </div>
 
