--- a/src/app/busqueda/busqueda.page.html
+++ b/src/app/busqueda/busqueda.page.html
@@ -1,9 +1,42 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>Busqueda</ion-title>
+  <ion-toolbar [color]="categoria" mode="md">
+    <ion-buttons slot="start">
+      <!-- <ion-back-button defaultHref="home"></ion-back-button> -->
+      <ion-back-button defaultHref="home"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Punto de partida</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
+  <ion-toolbar mode='ios'>
+    <ion-searchbar mode='ios' [(ngModel)]="autocomplete.query" (ionInput)="updateSearch()" cancelButtonText="Cancelar" placeholder="Buscar"></ion-searchbar>
+  </ion-toolbar>
+  <div *ngIf="!cargando">
+    <ion-list>
+      <ion-item tappable (click)="myLocation()">
+          <ion-icon mode="ios" name="locate"></ion-icon>&nbsp;Mi ubicación actual
+      </ion-item>
+      <ion-item *ngFor="let item of autocompleteItems" tappable (click)="chooseItem(item)">
+        {{ item }}
+      </ion-item>
+  
+      <div *ngIf="miLocation" text-center class="animated slideInDown">
+        <img class="animated pulse infinite" src="./assets/imgs/pin_rojoXl.png" alt="ubicacion_alerta"><br><br>
+        Calculando...
+      </div>
+    </ion-list>
+  </div> 
+  <div *ngIf="cargando">
+    <ion-list>
+      <ion-item mode='ios'>
+        <ion-label position="stacked">
+          <ion-skeleton-text animated style="width: 30%"></ion-skeleton-text>
+        </ion-label>
+        <ion-skeleton-text animated></ion-skeleton-text>
+      </ion-item>
+    </ion-list>
+  </div>
+
 
 </ion-content>
