--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,3 +1,7 @@
+.ion-card-home{
+    background: transparent;
+    height: 30.5%;
+}
 .thumbails{
     width: 100%;
     height: 35%;
@@ -10,11 +14,19 @@
     .thumbails{
         height: 43%;
     }
+    .ion-card-home{
+        background: transparent;
+        height: 30.5%;
+    }
 }
 @media screen and (max-height: 823px) {
     /* start of medium tablet styles */
     .thumbails{
         height: 210px;
+    }
+    .ion-card-home{
+        background: transparent;
+        height: 29.5%;
     }
 }
 @media screen and (max-height: 736px) {
@@ -22,11 +34,19 @@
     .thumbails{
         height: 100px;
     }
+    .ion-card-home{
+        background: transparent;
+        height: 28.5%;
+      }
 }
 @media screen and (max-height: 667px) {
     /* start of medium tablet styles */
     .thumbails{
         height: 80px;
+    }
+    .ion-card-home{
+        background: transparent;
+        height: 28.5%;
     }
 }            
     
@@ -36,12 +56,20 @@
         /*height: 17%;*/
         display: none;
     }
+    .ion-card-home{
+        background: transparent;
+        height: 28.5%;
+      }
 }
 @media screen and (max-height: 568px) {
     /* start of medium tablet styles */
     .thumbails{
         /*height: 7%;*/
         display: none;
+    }
+    .ion-card-home{
+        background: transparent;
+        height: 27.5%;
     }
 }    
     
@@ -51,4 +79,8 @@
         /*height: 9%;*/
         display: none;
     }
+    .ion-card-home{
+        background: transparent;
+        height: 26.5%;
+      }
 }
