--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -10,6 +10,9 @@
 .ion-card-home{
     background: transparent;
     height: 30.5%;
+    border: none;
+    border-radius: 0px;
+    box-shadow: none;
 }
 #container strong {
   font-size: 20px;
