mejoras en la propanga

--- a/src/app/mapa-test/mapa-test.page.html
+++ b/src/app/mapa-test/mapa-test.page.html
@@ -113,11 +113,13 @@
       <ion-row>
         <ion-col size="3" style="padding: 0;margin: 0;">
           <!-- <img src="./assets/imgs/logo_rayen.png" /> -->
-          <img src="{{srcPropaganda}}" />
+          <img src="{{propaganda.RutaImagen}}" />
         </ion-col>
         <ion-col style="padding: 0;margin: 0;">
-          <h5 style="font-size: 1em;margin: 0;">{{tituloPropaganda}}</h5>
-          <h6 style="font-size: 0.8em;margin: 0;">{{subTituloPropaganda}}</h6>
+          <h5 style="font-size: 1em;margin: 0;">{{propaganda.Titulo}}</h5>
+          <!-- <h6 style="font-size: 0.8em;margin: 0;">{{subTituloPropaganda}}</h6> -->
+          <h6 style="font-size: 0.8em;margin: 0;"><a href="mailto:{{propaganda.CorreoElectronico}}">Email: {{propaganda.CorreoElectronico}}</a></h6>
+          
         </ion-col>
       </ion-row>
     </ion-grid>
