--- a/src/app/mapa-test/mapa-test.page.html
+++ b/src/app/mapa-test/mapa-test.page.html
@@ -116,10 +116,11 @@
           <img src="{{propaganda.RutaImagen}}" />
         </ion-col>
         <ion-col style="padding: 0;margin: 0;">
-          <h5 style="font-size: 1em;margin: 0;">{{propaganda.Titulo}}</h5>
+          <h5 style="margin: 0;" [style.font-size.em]="largoTitulo <= 45 ? 1 : 0.8"></h5>>{{propaganda.Titulo}}</h5>
           <!-- <h6 style="font-size: 0.8em;margin: 0;">{{subTituloPropaganda}}</h6> -->
-          <h6 style="font-size: 0.8em;margin: 0;" (click)="abrirEmail()"><a>Email: {{propaganda.CorreoElectronico}}</a></h6>
-          
+          <!-- <h6 style="font-size: 0.8em;margin: 0;" (click)="abrirEmail()"><a>Email: {{propaganda.CorreoElectronico}}</a></h6> -->
+          <!-- <a href="mailto:gsc@travelsecurity.com">gsc@travelsecurity.com</a> -->
+          <a style="font-size: 0.8em;margin: 0;" href="mailto:{{propaganda.CorreoElectronico}}">Email: {{propaganda.CorreoElectronico}}</a>
         </ion-col>
       </ion-row>
     </ion-grid>
