--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -11,10 +11,12 @@
 
 <ion-content [fullscreen]="true">
   <div *ngIf="!cargando">
-    <ion-thumbnail class="thumbails">
-      <!-- <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y"> -->
-      <img src="./assets/imgs/registro_1.png">
-    </ion-thumbnail>
+    <div style="padding: 0;margin: 0;background: #4ACAF0">
+      <ion-thumbnail class="thumbails">
+        <!-- <img src="./assets/imgs/registro_1.png"> -->
+        <img src="./assets/imgs/banner.png">
+      </ion-thumbnail>
+    </div>
     <div class="abajo">
       <ion-item mode='ios'>
         <ion-label position="stacked">Nombre *</ion-label>
