--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -3,8 +3,9 @@
     height: 30.5%;
 }
 .thumbails{
-    width: 100%;
-    height: 35%;
+    height: 150px;
+    width: 70%;
+    margin-left: 15%;
 }
 .abajo{
     width: 100%;
@@ -12,7 +13,9 @@
 @media screen and (max-height: 991px) {
     /* start of large tablet styles */
     .thumbails{
-        height: 43%;
+        height: 150px;
+        width: 90%;
+        margin-left: 5%;
     }
     .ion-card-home{
         background: transparent;
@@ -22,7 +25,9 @@
 @media screen and (max-height: 823px) {
     /* start of medium tablet styles */
     .thumbails{
-        height: 210px;
+        height: 150px;
+        width: 90%;
+        margin-left: 5%;
     }
     .ion-card-home{
         background: transparent;
@@ -32,7 +37,9 @@
 @media screen and (max-height: 736px) {
     /* start of medium tablet styles */
     .thumbails{
-        height: 100px;
+        height: 80px;
+        width: 70%;
+        margin-left: 15%;
     }
     .ion-card-home{
         background: transparent;
@@ -42,7 +49,9 @@
 @media screen and (max-height: 667px) {
     /* start of medium tablet styles */
     .thumbails{
-        height: 80px;
+        height: 50px;
+        width: 50%;
+        margin-left: 25%;
     }
     .ion-card-home{
         background: transparent;
