--- a/src/app/gravedad/gravedad.page.scss
+++ b/src/app/gravedad/gravedad.page.scss
@@ -45,17 +45,17 @@
 }
 
 .barra_range{
-	position: absolute;
-	bottom: 40px;
+	/* position: absolute; */
+	/* bottom: 40px; */
 	display: block;
 	width: 100%;
 }
 
 .btn_siguiente{
-	position: absolute;
-	bottom: 0;
+	/* position: absolute;
+	bottom: 0; */
 	left: 0;
-	z-index: 10;
+	/* z-index: 10; */
 	display: block;
 	width: 100%;
 	button{
@@ -140,7 +140,7 @@
   @media screen and (max-height: 667px) {
 	  /* start of medium tablet styles */
 	  .div_img{
-		height: 30vh;
+		height: 25vh;
 			img{
 				height: 100%;
 			}
@@ -155,7 +155,7 @@
   @media screen and (max-height: 640px) {
   /* start of medium tablet styles */
   .div_img{
-	height: 30vh;
+	height: 25vh;
 		img{
 			height: 100%;
 		}
@@ -169,7 +169,7 @@
   @media screen and (max-height: 568px) {
 	/* start of medium tablet styles */
 	.div_img{
-		height: 25vh;
+		height: 23vh;
 			img{
 				height: 100%;
 			}
@@ -184,7 +184,7 @@
   @media screen and (max-height: 479px) {
   /* start of phone styles */
   .div_img{
-	height: 25vh;
+	height: 23vh;
 		img{
 			height: 100%;
 		}
