--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -3,17 +3,18 @@
     height: 30.5%;
 }
 .thumbails{
-    height: 150px;
+    height: 130px;
     width: 70%;
     margin-left: 15%;
 }
 .abajo{
     width: 100%;
+    margin-bottom: 30px;
 }
 @media screen and (max-height: 991px) {
     /* start of large tablet styles */
     .thumbails{
-        height: 150px;
+        height: 130px;
         width: 90%;
         margin-left: 5%;
     }
@@ -25,7 +26,7 @@
 @media screen and (max-height: 823px) {
     /* start of medium tablet styles */
     .thumbails{
-        height: 150px;
+        height: 130px;
         width: 90%;
         margin-left: 5%;
     }
