--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,3 +1,8 @@
+body {
+    padding-top: constant(safe-area-inset-top); /* iOS 11.0 */
+    padding-top: env(safe-area-inset-top); /* iOS 11.2 */
+}
+
 .ion-card-home{
     background: transparent;
     height: 30.5%;
@@ -9,7 +14,9 @@
 }
 .abajo{
     width: 100%;
-    margin-bottom: 30px;
+    /* margin-bottom: 30px; */
+    margin-bottom: constant(safe-area-inset-bottom); /* iOS 11.0 */
+    margin-bottom: env(safe-area-inset-bottom); /* iOS 11.2 */
 }
 @media screen and (max-height: 991px) {
     /* start of large tablet styles */
