--- a/src/app/mapa-test/mapa-test.page.scss
+++ b/src/app/mapa-test/mapa-test.page.scss
@@ -1,3 +1,19 @@
+.ion-page {
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    display: flex;
+    position: absolute;
+    flex-direction: column;
+    justify-content: space-between;
+    contain: layout size style;
+    overflow: hidden;
+    z-index: 0;
+    padding-top: constant(safe-area-inset-top);
+    padding-top: env(safe-area-inset-top);
+}
+
 .md{
     page-mapa-test{
         .barra_transporte{
