--- a/src/app/mapa-test/mapa-test.page.scss
+++ b/src/app/mapa-test/mapa-test.page.scss
@@ -1,4 +1,4 @@
-.ion-page {
+.contenido{
     left: 0;
     right: 0;
     top: 0;
@@ -9,7 +9,6 @@
     justify-content: space-between;
     contain: layout size style;
     overflow: hidden;
-    z-index: 0;
     padding-top: constant(safe-area-inset-top);
     padding-top: env(safe-area-inset-top);
 }
