--- a/src/app/gravedad/gravedad.page.html
+++ b/src/app/gravedad/gravedad.page.html
@@ -28,10 +28,23 @@
 
   
   <div class="div_gravedad" class="ion-padding ion-text-center"> 
-    <ion-item>
-      <ion-label [ngClass]="categoria">Sólo establecimientos públicos</ion-label>
-      <ion-toggle [color]="categoria" [(ngModel)]="esPublico" (ionChange)="onChangePublico($event)" mode="ios"></ion-toggle>
-    </ion-item> 
+    <!-- <ion-item style="padding: 0;margin: 0;"> -->
+      <!-- <ion-label [ngClass]="categoria">Sólo establecimientos públicos</ion-label> -->
+      <legend [ngClass]="categoria" style="font-size: 0.9em;">Tipo de establecimientos</legend>
+      <ion-grid style="padding: 0; margin: 0;">
+        <ion-row style="padding: 0; margin: 0;">
+          <ion-col>
+            <p style="padding: 0; margin: 0;" [ngClass]="categoria">Privados</p>
+          </ion-col>
+          <ion-col>
+            <ion-toggle [color]="categoria" [(ngModel)]="esPublico" (ionChange)="onChangePublico($event)" mode="ios"></ion-toggle>
+          </ion-col>
+          <ion-col>
+            <p style="padding: 0; margin: 0;" [ngClass]="categoria">Públicos</p>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    <!-- </ion-item>  -->
     <div class="div_mensaje" padding *ngIf="!gravedad">
       <p [ngClass]="categoria">1. Seleccione el medio de transporte de su preferencia.<br>
       <ion-icon [ngClass]="categoria" name="medkit"></ion-icon><br>
