cambios nueva compilacion

--- a/src/app/error/error.page.html
+++ b/src/app/error/error.page.html
@@ -3,7 +3,7 @@
 <ion-content>
   <div class="div_error" text-center>
     <img src="./assets/imgs/pin_rojoXl.png" alt="ubicacion_alerta">
-    <p>Asegúrate de tener conexión de internet y/o compartir tu ubicación</p>
+    <p>Asegúrate de tener conexión de internet, que tu aplicación tenga los permisos necesarios y/o compartir tu ubicación</p>
     <button (click)="verMapaConConexion()" class="embarazada" ion-button round>
         Volver a intentar
     </button>
