--- a/src/app/error/error.page.scss
+++ b/src/app/error/error.page.scss
@@ -2,6 +2,7 @@
     background-color: #39B5E9;
     height: 100%;
     padding-top: 50%;
+    text-align: center;
     
     img{
         height: 15%;
@@ -14,6 +15,7 @@
     }
     button{
         margin-top: 5%;
+        font-size: 1em;
     }
 }
 .embarazada{
