cambios en el mapa

--- a/src/app/mapa-test/mapa-test.page.html
+++ b/src/app/mapa-test/mapa-test.page.html
@@ -63,7 +63,9 @@
         </p>
         <p class="plus_sign">+</p>
         <p class="tiempo_destino" *ngIf="esCliente1 == true">
-          <ion-icon name="medkit"></ion-icon><span>&nbsp;{{tiempoEspera1}} min</span>
+          <ion-icon name="medkit"></ion-icon>
+            <span *ngIf="tiempoEspera1 > 0">&nbsp;{{tiempoEspera1}} min</span>
+            <span *ngIf="tiempoEspera1 <= 0">&nbsp;Sin Dato</span>
         </p>
         <p class="tiempo_destino" *ngIf="esCliente1 == false">
           <ion-icon name="medkit"></ion-icon><span>&nbsp;Sin Dato</span>
@@ -80,7 +82,9 @@
         </p>
         <p class="plus_sign">+</p>
         <p class="tiempo_destino" *ngIf="esCliente2 == true">
-          <ion-icon name="medkit"></ion-icon><span>&nbsp;{{tiempoEspera2}} min</span>
+          <ion-icon name="medkit"></ion-icon>
+            <span *ngIf="tiempoEspera2 > 0">&nbsp;{{tiempoEspera2}} min</span>
+            <span *ngIf="tiempoEspera2 <= 0">&nbsp;Sin Dato</span>
         </p>
         <p class="tiempo_destino" *ngIf="esCliente2 == false">
           <ion-icon name="medkit"></ion-icon><span>&nbsp;Sin Dato</span>
@@ -97,7 +101,9 @@
         </p>
         <p class="plus_sign">+</p>
         <p class="tiempo_destino" *ngIf="esCliente3 == true">
-          <ion-icon name="medkit"></ion-icon><span>&nbsp;{{tiempoEspera3}} min</span>
+          <ion-icon name="medkit"></ion-icon>
+            <span *ngIf="tiempoEspera3 > 0">&nbsp;{{tiempoEspera2}} min</span>
+            <span *ngIf="tiempoEspera3 <= 0">&nbsp;Sin Dato</span>
         </p>
         <p class="tiempo_destino" *ngIf="esCliente3 == false">
           <ion-icon name="medkit"></ion-icon><span>&nbsp;Sin Dato</span>
