Cambios imagen detalle

--- a/src/app/detalle-propaganda/detalle-propaganda.page.html
+++ b/src/app/detalle-propaganda/detalle-propaganda.page.html
@@ -10,7 +10,7 @@
 </ion-header>
 
 <ion-content>
-  <ion-row (click)="abrirUrl()">
-    <img class="img-flayer" src="{{objetoPropaganda.RutaImagenDetalle}}" />
+  <ion-row (click)="abrirUrl()" style="height: 100%;">
+    <img class="img-flayer" src="{{objetoPropaganda.RutaImagenDetalle}}" style="height: 100%;"/>
   </ion-row>
 </ion-content>
