--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,8 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="secondary">
-<!--     <ion-buttons slot="start" (click)="salir()" *ngIf="esIOS == false">
-        <ion-icon slot="icon-only" name="exit"></ion-icon>
-      </ion-buttons> -->
+    <ion-buttons slot="start" (click)="salir()" *ngIf="esIOS == false">
+      <ion-icon slot="icon-only" name="exit"></ion-icon>
+    </ion-buttons>
     <ion-title class="ion-text-center">
       Atención para:
     </ion-title>
